# algoBase

./: AdjacencyList.hpp  ArrayOfArrays.hpp  CMakeLists.txt  ConnectGraph.cpp  ConnectGraph.d  ConnectGraph.md  Dockerfile  Donut.cpp  FindMaxPairsDouble.cpp  Hopscotch.cpp  HorizontalCrossing.cpp  LinkedList.hpp  LongestIncreasingSubseqDP.cpp  LongestIncreasingSubseqRecursive.cpp  Makefile  MaxPairs.md  NegativeCycle.cpp  NegativeCycle.md  Planters.cpp  Planters.md  Prerequisites.cpp  Prerequisites.d  Primes.cpp  Primes.md  README.md  SmallestTwo.cpp  SmallestTwo.md  SpanTree.cpp  TimeTrack.cpp  WeightedBySumInversions.cpp  WeightedBySumInversions.md  graphClasses.hpp  helpers.h  helpers.hpp  numPaths.cpp  numPaths.d  numPaths.md  runTest.bat  runner.h  test.cpp
text_expected/: 3_3_expected.txt  3_4_expected.txt  3_5_expected.txt  3_6_expected.txt  answer-5.6.txt  answer-5.7.txt  answer-5.8.txt
text_in/: 1_1.txt  1_2.txt  1_3.txt  1_4.txt  1_6.txt  1_7.txt  3_6.txt  input-1.1.txt  input-1.2.txt  input-1.3.txt  input-1.4.txt  input-1.5.txt  input-1.6.txt  input-1.7.txt  input-1.8.txt  input-5.1.txt  input-5.2.txt  input-5.3.txt  input-5.4.txt  input-5.5.txt  input-5.6.txt  input-5.7.txt  input-5.8.txt  test.txt
text_out/: 3_3_output.txt  input-5.6_output.txt  test2.1_output.txt  test2.2_output.txt  test2.3_output.txt  test2_output.txt  test4_output.txt
timeTests/: 100.txt  1000.txt  3000.txt  500.txt  results.txt
writeups/: Hopscotch.md  donut.md
